--- a/css/style.css
+++ b/css/style.css
@@ -4,24 +4,22 @@
 
 * {
     box-sizing: border-box;
+    font-family: 'Merriweather', sans-serif;    
   }
   
   body {
     height: 100%;
     background: linear-gradient(90deg, #FFFFFF 50%, #E1E4E7 50%);
-    font-family: 'Merriweather Sans', sans-serif;
   }
   
   .container {
     position: relative;
-    /* max-width: 1000px; */
+    max-width: 1000px;
     margin: 0 auto;
   }
   
   .column {
     float: left;
-    justify-content: center;
-    align-items: center;
     width: 50%;
   }
   
@@ -116,9 +114,8 @@
   -------------------------------------------------------------------- */
 
   .hcard-display {
-    float: left;
-    width: 450px;
-    margin-left: 40px;
+    width: 100%;
+    margin-left: 10%;
     margin-top: 100px;
     border-bottom: 2px solid #9A9A9A;
   }
@@ -190,7 +187,6 @@
   
   .hcard-field {
     display: inline-block;
-    font-family: 'Merriweather', sans-serif;
     font-size: 16px;
     color: #000000;
   }
@@ -210,3 +206,42 @@
     width: 50%;
     border-bottom: 1px solid #DBE0E2;
   }
+
+  /* -----------------------------------------------------------------
+  hCard Media Query
+  -------------------------------------------------------------------- */
+
+  @media only screen and (max-width: 1024px) {
+    body {
+      background: none;
+    }
+    .column {
+      float: left;
+      width: 100%;
+    }
+    .hcard-input {
+      width: 100%;
+    }
+    .hcard-display {
+      padding-top: 20px;
+      padding-bottom: 20px;
+      width: 100%;
+      margin: 0;
+    }
+    .field {
+      width: 100%;
+    }
+    .field:nth-child(odd) {
+      padding-left: 0px;
+    }
+    .field:nth-child(even) {
+      padding-right: 0px;
+    }
+    button {
+      width: 45%;
+    }
+    .create-btn {
+      float: right;
+    }
+  }
+  
